[gd_scene load_steps=13 format=3 uid="uid://cebaljtmx1h0h"]

[ext_resource type="Script" uid="uid://bmq1od5nrinc5" path="res://utilities/screens/settings/scripts/settings.gd" id="1_4jrm6"]
[ext_resource type="Script" uid="uid://cdwubu8bgle2r" path="res://utilities/screens/settings/scripts/aspect_ratio.gd" id="2_hf73j"]
[ext_resource type="Script" uid="uid://dqa5vl3m6j0fc" path="res://utilities/screens/settings/scripts/scaling.gd" id="3_p75hu"]
[ext_resource type="Script" uid="uid://cgp88opdtpd1u" path="res://utilities/screens/settings/scripts/fullscreen.gd" id="4_i323y"]
[ext_resource type="Script" uid="uid://fty04kb6kiu8" path="res://utilities/screens/settings/scripts/borderless.gd" id="5_7gqhl"]
[ext_resource type="Script" uid="uid://cmnm2ioiwh3f" path="res://utilities/screens/settings/scripts/vsync.gd" id="6_7jlka"]
[ext_resource type="Script" uid="uid://be5uh4pjt8j6c" path="res://utilities/screens/settings/scripts/touch_controls.gd" id="7_iifp2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a084d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyo75"]
bg_color = Color(0.45098, 0.45098, 0.45098, 0.337255)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nmhhd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03182"]
bg_color = Color(0.45098, 0.45098, 0.45098, 0.337255)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kuoyp"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4jrm6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPadding" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 44
text = "Settings"
horizontal_alignment = 1

[node name="MiddlePadding" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPadding" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsOptions" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme_override_constants/separation = 4
alignment = 1

[node name="AspectRatio" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../Scaling")
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_a084d")
script = ExtResource("2_hf73j")

[node name="Background" type="Panel" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tyo75")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "Aspect Ratio :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Control" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Previous" type="Button" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 33
text = "<"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.0
theme_override_font_sizes/font_size = 22
text = "Auto"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 33
text = ">"

[node name="Scaling" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../AspectRatio")
focus_neighbor_bottom = NodePath("../Fullscreen")
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nmhhd")
script = ExtResource("3_p75hu")

[node name="Background" type="Panel" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_03182")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "Resolution :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Control" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Previous" type="Button" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 33
text = "<"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.0
theme_override_font_sizes/font_size = 22
text = "Auto"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 33
text = ">"

[node name="Fullscreen" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Scaling")
focus_neighbor_bottom = NodePath("../Borderless")
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kuoyp")
script = ExtResource("4_i323y")

[node name="Background" type="Panel" parent="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_03182")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "Fullscreen :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Enabled" type="CheckButton" parent="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 1.5
focus_mode = 0
flat = true

[node name="Borderless" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Fullscreen")
focus_neighbor_bottom = NodePath("../VSync")
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kuoyp")
script = ExtResource("5_7gqhl")

[node name="Background" type="Panel" parent="VBoxContainer/HBoxContainer/SettingsOptions/Borderless"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_03182")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions/Borderless"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SettingsOptions/Borderless/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "Exclusive Fullscreen :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Enabled" type="CheckButton" parent="VBoxContainer/HBoxContainer/SettingsOptions/Borderless/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 1.5
focus_mode = 0
flat = true

[node name="VSync" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Borderless")
focus_neighbor_bottom = NodePath("../TouchControls")
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kuoyp")
script = ExtResource("6_7jlka")

[node name="Background" type="Panel" parent="VBoxContainer/HBoxContainer/SettingsOptions/VSync"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_03182")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions/VSync"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SettingsOptions/VSync/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "V-Sync :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Enabled" type="CheckButton" parent="VBoxContainer/HBoxContainer/SettingsOptions/VSync/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 1.5
focus_mode = 0
flat = true

[node name="TouchControls" type="PanelContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../VSync")
focus_neighbor_bottom = NodePath("../Back")
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kuoyp")
script = ExtResource("7_iifp2")

[node name="Background" type="Panel" parent="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_03182")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "Touch Controls :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Enabled" type="CheckButton" parent="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 1.5
focus_mode = 0
flat = true

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer/SettingsOptions"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../TouchControls")
theme_override_font_sizes/font_size = 22
text = "BACK"

[node name="RightPadding" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomPadding" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio" to="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio" method="_on_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio" to="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio" method="_on_focus_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer/Control/Previous" to="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio" method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio/HBoxContainer/Control/Next" to="VBoxContainer/HBoxContainer/SettingsOptions/AspectRatio" method="_on_next_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/SettingsOptions/Scaling" to="VBoxContainer/HBoxContainer/SettingsOptions/Scaling" method="_on_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/SettingsOptions/Scaling" to="VBoxContainer/HBoxContainer/SettingsOptions/Scaling" method="_on_focus_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer/Control/Previous" to="VBoxContainer/HBoxContainer/SettingsOptions/Scaling" method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsOptions/Scaling/HBoxContainer/Control/Next" to="VBoxContainer/HBoxContainer/SettingsOptions/Scaling" method="_on_next_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen" to="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen" method="_on_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen" to="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen" method="_on_focus_exited"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen/HBoxContainer/Enabled" to="VBoxContainer/HBoxContainer/SettingsOptions/Fullscreen" method="_on_enabled_toggled"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/SettingsOptions/Borderless" to="VBoxContainer/HBoxContainer/SettingsOptions/Borderless" method="_on_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/SettingsOptions/Borderless" to="VBoxContainer/HBoxContainer/SettingsOptions/Borderless" method="_on_focus_exited"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/SettingsOptions/Borderless/HBoxContainer/Enabled" to="VBoxContainer/HBoxContainer/SettingsOptions/Borderless" method="_on_enabled_toggled"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/SettingsOptions/VSync" to="VBoxContainer/HBoxContainer/SettingsOptions/VSync" method="_on_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/SettingsOptions/VSync" to="VBoxContainer/HBoxContainer/SettingsOptions/VSync" method="_on_focus_exited"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/SettingsOptions/VSync/HBoxContainer/Enabled" to="VBoxContainer/HBoxContainer/SettingsOptions/VSync" method="_on_enabled_toggled"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls" to="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls" method="_on_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls" to="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls" method="_on_focus_exited"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls/HBoxContainer/Enabled" to="VBoxContainer/HBoxContainer/SettingsOptions/TouchControls" method="_on_enabled_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsOptions/Back" to="." method="_on_back_pressed"]
